Приведены в порядок размеры рисунков в ЛР1

--- a/lab1.tex
+++ b/lab1.tex
@@ -80,7 +80,7 @@
 
 \begin{figure}[H]
   \centering
-  \def\svgwidth{\columnwidth}
+  \def\svgwidth{7cm}
   \includesvg{images/lab_1/and_gate}
   \caption{Структура модуля \qeng{and\_gate}}
 \end{figure}
@@ -121,7 +121,7 @@
 
 \begin{figure}[H]
   \centering
-  \def\svgwidth{\columnwidth}
+  \def\svgwidth{12cm}
   \includesvg{images/lab_1/bitwise_ops}
   \caption{Структура модуля \qeng{bitwise\_ops}}
   \label{fig:bitwiseops}
@@ -145,7 +145,7 @@
 
 \begin{figure}[H]
   \centering
-  \def\svgwidth{\columnwidth}
+  \def\svgwidth{8cm}
   \includesvg{images/lab_1/assign}
   \caption{Действие оператора \kword{assign}}
   \label{fig:assign}
@@ -194,7 +194,7 @@
 
 \begin{figure}[H]
   \centering
-  \def\svgwidth{\columnwidth}
+  \def\svgwidth{6cm}
   \includesvg{images/lab_1/decoder}
   \caption{Графическое обозначение дешифратора}
   \label{fig:decoder}
@@ -220,7 +220,7 @@
 
 \begin{figure}[H]
   \centering
-  \def\svgwidth{\columnwidth}
+  \def\svgwidth{5cm}
   \includesvg{images/lab_1/mux}
   \caption{Графическое обозначение мультиплексора}
   \label{fig:mux}
@@ -341,7 +341,7 @@
       \item Соответствие линий диодам семисегментного индикатора и пример кода дешифратора приведены ниже:
         \begin{figure}[H]
           \centering
-          \def\svgwidth{\columnwidth}
+          \def\svgwidth{3cm}
           \includesvg{images/lab_1/7seg}
           \label{fig:decoder}
         \end{figure}
