Добавлен раздел с описанием модуля, мелкие правки методички

--- a/lab1.tex
+++ b/lab1.tex
@@ -1,4 +1,4 @@
-\chapter{Введение в Verilog HDL} 
+\chapter{Введение в SystemVerilog HDL} 
 \section{Возникновение языков описания цифровой аппаратуры}
 
 \par{Цифровые устройства — это устройства, предназначенные для приёма и обработки цифровых сигналов. Цифровыми называются сигналы, которые можно рассматривать в виде набора дискретных уровней. В цифровых сигналах информация кодируется в виде конкретного уровня напряжения. Как правило выделяется два уровня — логический «0» и логическая «1».}
@@ -11,7 +11,115 @@
 
 \par{Такой подход существенно изменил процесс разработки цифровых устройств, превратив громоздкие, тяжело читаемые схемы в относительно простые и доступные описания поведения.}
 
-\par{В данном курсе мы рассмотрим язык описания цифровой аппаратуры \eng{Verilog HDL} — один из наиболее распространённых на текущий момент. И начнём мы с разработки наиболее простых цифровых устройств — логических вентилей.}
+\par{В данном курсе мы рассмотрим язык описания цифровой аппаратуры \eng{SystemVerilog HDL} — один из наиболее распространённых на текущий момент. И начнём мы с разработки наиболее простых цифровых устройств — логических вентилей.}
+
+\section{Базовые понятия языка SystemVerilog}
+Перед тем, как непосредственно приступить к разработке цифровых схем, необходимо изучить базовые понятия и конструкции языка SystemVerilog.
+SystemVerilog - сложный и объёмный язык с большим количеством возможностей. Весь функционал языка разделяется на два множества: \emph{синтезируемое множество БОЛД} и \emph{несинтезируемое множество БОЛД}.
+
+Под синтезируемым множеством понимается совокупность конструкций языка, которые могут быть воплощены в реальные аппаратные структуры (вентили, триггеры, защелки и так далее). 
+
+Несинтезируемое подмножество не может быть преобразовано в аппаратуру, но предоставляет дополнительные возможности для написания тестов.
+Вообще говоря, разработка аппаратных блоков неразрывно связана с их тестированием, и под тестированием следует понимать не попытку испытать на работоспособность \quotes{в реальной жизни} готовый аппаратный блок, а проверку описания блоков на соответствие спецификациям в среде моделирования - верификацию. В данном курсе мы будем заниматься в основном синтезируемым подмножеством и поверхностно коснёмся темы верификации и напишем простые тесты для разрабатываемых модулей.
+
+\subsection{Модули}
+
+Первым и главным понятием языка SystemVerilog является модуль. Модуль - выполняющий определенную функцию цифровой блок, \quotes{ящик}, который может иметь набор входных и выходных сигналов.
+Модуль всегда начинается с ключевого слова БОЛД module. Далее следует название модуля, в данном случае для наглядности модуль назван \quotes{my\_module\_name}. Заканчивается описание модуля ключевым словом \quotes{endmodule}.
+
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/module_example_1.sv}
+	\caption{Простейший модуль без внутренней логики, входов и выходов}
+	%\label{lab2:code1}
+\end{listing}
+
+Представленный пример модуля не содержит ни входов или выходов, ни логики и в целом такой модуль не способен выполнять никаких полезных функций. Схема такого модуля показана на рисунке ниже.
+
+\begin{figure}[H]
+  \centering
+  \def\svgwidth{7cm}
+  \includesvg[inkscapelatex=false]{images/lab_1/module_example_1.drawio}
+  \caption{Простейший модуль без внутренней логики, входов и выходов}
+\end{figure}
+
+Давайте теперь добавим в модуль входные и выходные сигналы. Входные сигналы обозначаются ключевым словом \quotes{input}, выходные - словом \quotes{output}. Сами порты модуля (входы a, b, c и выход y) перечисляются через запятую в формате, показанном в листинге кода N. Обратите внимание на то, что все входные и выходные порты объявлены как \quotes{logic}. На данном этапе достаточно запомнить, что порты описываются таким образом.
+
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/module_example_2.sv}
+	\caption{Модуль без внутренней логики, с тремя входами и одним выходом}
+	%\label{lab2:code1}
+\end{listing}
+
+
+\begin{figure}[H]
+  \centering
+  \def\svgwidth{9cm}
+  \includesvg[inkscapelatex=false]{images/lab_1/module_example_2.drawio}
+  \caption{Модуль без внутренней логики, с тремя входами и одним выходом}
+\end{figure}
+
+Давайте теперь добавим в модуль внутренний сигнал \quotes{my\_signal}. На данный момент это будет просто \quotes{висящий в воздухе} провод, ни к чему не подключенный.
+
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/module_example_3.sv}
+	\caption{Модуль с пока не подключенным внутренним сигналом}
+	%\label{lab2:code1}
+\end{listing}
+
+
+\begin{figure}[H]
+  \centering
+  \def\svgwidth{9cm}
+  \includesvg[inkscapelatex=false]{images/lab_1/module_example_3.drawio}
+  \caption{Модуль с пока не подключенным внутренним сигналом}
+\end{figure}
+
+Ни к чему не подключенный провод не несёт какого-либо практического смысла, поэтому давайте подключим его куда-нибудь. В показанном примере кода N сигнал \quotes{my\_signal} подключается к выходу операции \quotes{И} между входами a и b.
+
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/module_example_4.sv}
+	\caption{Модуль с внутренней логикой}
+	%\label{lab2:code1}
+\end{listing}
+
+\begin{figure}[H]
+  \centering
+  \def\svgwidth{9cm}
+  \includesvg[inkscapelatex=false]{images/lab_1/module_example_4.drawio}
+  \caption{Модуль с внутренней логикой}
+\end{figure}
+
+Давайте теперь доведем модуль до функционально законченного вида. Подключим \quotes{my\_signal} и вход модуля \quotes{c} к операции логическое \quotes{ИЛИ}, а результат операции подключим к выходу модуля \quotes{y}.
+
+Получившийся модуль выполняет логическую функцию $y = (a \& b) | c $ ;
+
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/module_example_5.sv}
+	\caption{Пример законченного модуля}
+	%\label{lab2:code1}
+\end{listing}
+
+
+
+\begin{figure}[H]
+  \centering
+  \def\svgwidth{9cm}
+  \includesvg[inkscapelatex=false]{images/lab_1/module_example_5.drawio}
+  \caption{Пример законченного модуля}
+\end{figure}
+
+
+
+
+%\subsection{Арифметические и логические операции}
+%\subsection{Always блоки}
+% logic
+% assign
+% always_comb
+% always_ff
+%\subsection{Оператор case}
+% case
+%Приведенной информации достаточно для того, чтобы начать работу с курсом. В дальнейшем, мы будем расширять
 
 \section{\eng{HDL} описания логических вентилей}
 
@@ -68,14 +176,17 @@
 }
 \end{table}
 
-\par{Начнём знакомиться с \eng{Verilog HDL} с описания логического вентиля \quotes{И}. Ниже приведен код, описывающий вентиль с точки зрения его структуры:}
+\par{Начнём знакомиться с \eng{SystemVerilog HDL} с описания логического вентиля \quotes{И}. Ниже приведен код, описывающий вентиль с точки зрения его структуры:}
 
-\noindent
-\begin{minipage}{\linewidth}
- \lstinputlisting[caption={Модуль, описывающий вентиль \quotes{И}}]{./code_examples/lab_1/and_gate.sv}
-\end{minipage}
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/and_gate.sv}
+	\caption{Модуль, описывающий вентиль \quotes{И}}
+	%\label{lab2:code1}
+\end{listing}
 
-\par{Описанный выше модуль можно представить как некоторый \quotes{ящик}, в который входит 2 провода с названиями \emph{\qeng{a}} и \emph{\qeng{b}} и из которого выходит один провод с названием \emph{\qeng{result}}. Внутри этого блока результат выполнения операции \quotes{И} (в синтаксисе Verilog записывается как \quotes{\&}) над входами соединяют с выходом.}
+
+
+\par{Описанный выше модуль можно представить как некоторый \quotes{ящик}, в который входит 2 провода с названиями \emph{\qeng{a}} и \emph{\qeng{b}} и из которого выходит один провод с названием \emph{\qeng{result}}. Внутри этого блока результат выполнения операции \quotes{И} (в синтаксисе SystemVerilog записывается как \quotes{\&}) над входами соединяют с выходом.}
 \par{Схематично изобразим этот модуль:}
 
 \begin{figure}[H]
@@ -87,35 +198,61 @@
 
 \par{Аналогично опишем все оставшиеся вентили:}
 
-\noindent
-\begin{minipage}{\linewidth}
-  \lstinputlisting[caption={Модуль, описывающий вентиль \quotes{ИЛИ}}]{./code_examples/lab_1/or_gate.sv}
-\end{minipage}
 
-\noindent
-\begin{minipage}{\linewidth}
-  \lstinputlisting[caption={Модуль, описывающий вентиль \mbox{\quotes{Исключающее ИЛИ}}}]{./code_examples/lab_1/xor_gate.sv}
-\end{minipage}
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/or_gate.sv}
+	\caption{Модуль, описывающий вентиль \quotes{ИЛИ}}
+	%\label{lab2:code1}
+\end{listing}
 
-\noindent
-\begin{minipage}{\linewidth}
-  \lstinputlisting[caption={Модуль, описывающий вентиль \quotes{НЕ}}]{./code_examples/lab_1/not_gate.sv}
-\end{minipage}
+
+
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/xor_gate.sv}
+	\caption{Модуль, описывающий вентиль \mbox{\quotes{Исключающее ИЛИ}}}
+	%\label{lab2:code1}
+\end{listing}
+
+
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/not_gate.sv}
+	\caption{Модуль, описывающий вентиль \quotes{НЕ}}
+	%\label{lab2:code1}
+\end{listing}
+
 
 \par{В проектировании цифровых устройств логические вентили наиболее часто используются для формулировки и проверки сложных условий, например:}
 
-\lstinputlisting[caption={Пример использования логических вентилей}]{./code_examples/lab_1/logic_gatex_example.sv}
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/logic_gatex_example.sv}
+	\caption{Пример использования логических вентилей}
+	%\label{lab2:code1}
+\end{listing}
+
+
 
 \par{Условие будет выполняться либо когда \emph{не} выполнено условие \emph{\qeng{c}}, либо когда одновременно выполняются условия \emph{\qeng{a}} и \emph{\qeng{b}}. \emph{Здесь и далее под условием понимается логический сигнал, отражающий его истинность.}}
 \par{В качестве входов, выходов и внутренних соединений в блоках могут использоваться шины — группы проводов. Ниже приведен пример работы с шинами:}
 
-\lstinputlisting[caption={Модуль, описывающий побитовое \quotes{ИЛИ} \mbox{между двумя шинами}},float,floatplacement=H]{./code_examples/lab_1/bus_or.sv}
+
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/bus_or.sv}
+	\caption{Модуль, описывающий побитовое \quotes{ИЛИ} \mbox{между двумя шинами}}
+	%\label{lab2:code1}
+\end{listing}
+
 
 \par{Это описание описывает побитовое \quotes{ИЛИ} между двумя шинами по 8 бит. То есть описываются восемь логических вентилей \quotes{ИЛИ}, каждый из которых имеет на входе соответствующие разряды из шины \emph{\qeng{x}} и шины \emph{\qeng{y}}.}
 
 \par{При использовании шин можно в описании использовать конкретные биты шины и группы битов. Для этого используют квадратные скобки после имени шины:}
 
-\lstinputlisting[caption={Модуль, демонстрирующий \mbox{битовую адресацию шин}}, ]{./code_examples/lab_1/bitwise_ops.sv}
+
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/bitwise_ops.sv}
+	\caption{Модуль, демонстрирующий \mbox{битовую адресацию шин}}
+	%\label{lab2:code1}
+\end{listing}
+
 
 \par{Такому описанию соответствует следующая структурная схема, приведённая на Рис. \ref{fig:bitwiseops}}
 
@@ -127,15 +264,21 @@
   \label{fig:bitwiseops}
 \end{figure}
 
-\par{Впрочем, реализация ФАЛ (функций алгебры логики) с помощью логических вентилей не всегда представляется удобной. Допустим нам нужно описать таблично-заданную ФАЛ. Тогда для описания этой функции при помощи логических вентилей нам придётся сначала минимизировать её и только после этого, получив логическое выражение (которое, несмотря на свою минимальность, не обязательно является коротким), сформулировать его с помощью языка \eng{Verilog HDL}. Как видно, ошибку легко допустить на любом из этих этапов.}
+\par{Впрочем, реализация ФАЛ (функций алгебры логики) с помощью логических вентилей не всегда представляется удобной. Допустим нам нужно описать таблично-заданную ФАЛ. Тогда для описания этой функции при помощи логических вентилей нам придётся сначала минимизировать её и только после этого, получив логическое выражение (которое, несмотря на свою минимальность, не обязательно является коротким), сформулировать его с помощью языка \eng{SystemVerilog HDL}. Как видно, ошибку легко допустить на любом из этих этапов.}
 
-\par{Одно из главных достоинств \eng{Verilog HDL} — это возможность описывать поведение цифровых устройств вместо описания их структуры.}
+\par{Одно из главных достоинств \eng{SystemVerilog HDL} — это возможность описывать поведение цифровых устройств вместо описания их структуры.}
 
-\par{Программа-синтезатор анализирует синтаксические конструкции поведенческого описания цифрового устройства на \eng{Verilog HDL}, проводит оптимизацию и, в итоге, вырабатывает структуру, реализующую цифровое устройство, которое соответствует заданному поведению.}
+\par{Программа-синтезатор анализирует синтаксические конструкции поведенческого описания цифрового устройства на \eng{SystemVerilog HDL}, проводит оптимизацию и, в итоге, вырабатывает структуру, реализующую цифровое устройство, которое соответствует заданному поведению.}
 
-\par{Используя эту возможность, опишем таблично-заданную ФАЛ на \eng{Verilog HDL}:}
+\par{Используя эту возможность, опишем таблично-заданную ФАЛ на \eng{SystemVerilog HDL}:}
 
-\lstinputlisting[caption={Пример описания таблично-заданной ФАЛ на \eng{Verilog HDL}}, ]{./code_examples/lab_1/function_example.sv}
+
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/function_example.sv}
+	\caption{Пример описания таблично-заданной ФАЛ на \eng{SystemVerilog HDL}}
+	%\label{lab2:code1}
+\end{listing}
+
 
 \par{Описание, приведённое выше, определяет $y$, как таблично-заданную функцию, которая равна нулю на наборах 0, 2, 5, 6, 7 и единице на всех остальных наборах.}
 
@@ -152,7 +295,7 @@
 \end{figure}
 
 \par{Затем начинается функциональный блок \kword{always}, на котором мы остановимся подробнее.}
-\par{\eng{Verilog HDL} описывает цифровую аппаратуру, которая существует вся одновременно, но инструменты анализа и синтеза описаний являются программами и выполняются последовательно на компьютере. Так возникла необходимость последовательной программе «рассказать» про то, какие события приводят к срабатыванию тех или иных участков кода. Сами эти участки назвали процессами. Процессы обозначаются ключевым словом \kword{always}.}
+\par{\eng{SystemVerilog HDL} описывает цифровую аппаратуру, которая существует вся одновременно, но инструменты анализа и синтеза описаний являются программами и выполняются последовательно на компьютере. Так возникла необходимость последовательной программе «рассказать» про то, какие события приводят к срабатыванию тех или иных участков кода. Сами эти участки назвали процессами. Процессы обозначаются ключевым словом \kword{always}.}
 
 \par{В скобках после символа @ указывается так называемый \emph{список чувствительности процесса}, т.е. те сигналы, изменение которых должно приводить к пересчёту результатов выполнения процесса.}
 
@@ -160,13 +303,13 @@
 \par{Например, результат ФАЛ надо будет пересчитывать каждый раз, когда изменился входной вектор (любой бит входного вектора, т.е. любая переменная ФАЛ). Эти процессы можно назвать блоками или частями будущего цифрового устройства.}
 
 
-\par{Новое ключевое слово \kword{reg} здесь необходимо потому, что в выходной вектор происходит запись, а запись в языке \eng{Verilog HDL} разрешена только в «регистры» — специальные «переменные», предусмотренные в языке. Данная концепция и ключевое слово reg будет рассмотрено гораздо подробнее в следующей лабораторной работе.}
+\par{Новое ключевое слово \kword{reg} здесь необходимо потому, что в выходной вектор происходит запись, а запись в языке \eng{SystemVerilog HDL} разрешена только в «регистры» — специальные «переменные», предусмотренные в языке. Данная концепция и ключевое слово reg будет рассмотрено гораздо подробнее в следующей лабораторной работе.}
 
 \par{Оператор \kword{<=} называется оператором \emph{неблокирующего присваивания}. В результате выполнения этого оператора то, что стоит справа от него, «помещается» («кладется», «перекладывается») в регистр, который записан слева от него. Операции неблокирующего присваивания происходят одновременно по всему процессу.}
 
 \par{Оператор \kword{case} описывает выбор действия в зависимости от анализируемого значения. В нашем случае анализируется значение шины \qeng{x\_bus}. Ключевое слово \kword{default} используется для обозначения всех остальных (не перечисленных) вариантов значений.}
 
-\par{Константы и значения в языке \eng{Verilog HDL} описываются следующим образом: сначала указывается количество бит, затем после апострофа с помощью буквы указывается формат и, сразу за ним, записывается значение числа в этом формате.}
+\par{Константы и значения в языке \eng{SystemVerilog HDL} описываются следующим образом: сначала указывается количество бит, затем после апострофа с помощью буквы указывается формат и, сразу за ним, записывается значение числа в этом формате.}
 
 \par{Возможные форматы:
   \begin{itemize}%[noitemsep,topsep=0pt, after=\vspace{2pt}]
@@ -178,7 +321,13 @@
 
 \par{Немного расширив это описание, легко можно определить не одну, а сразу несколько ФАЛ одновременно. Для упрощения записи сразу объединим во входную шину все переменные. В выходную шину объединим значения функций:}
 
-\lstinputlisting[caption={Описание дешифратора на языке \eng{Verilog}}, ]{./code_examples/lab_1/decoder.sv}
+
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/decoder.sv}
+	\caption{Описание дешифратора на языке \eng{SystemVerilog}}
+	%\label{lab2:code1}
+\end{listing}
+
 
 \par{Теперь нам удалось компактно записать четыре функции, каждая от трёх переменных:
 \begin{itemize}%[noitemsep,topsep=2pt,label={}]
@@ -206,7 +355,12 @@
 
 \par{Рассмотрим еще один интересный набор ФАЛ:}
 
-\lstinputlisting[caption={Описание мультиплексора на языке \eng{Verilog}}, ]{./code_examples/lab_1/multiplexer.sv}
+
+\begin{listing}[H]
+	\inputminted{SystemVerilog}{code_examples/lab_1/multiplexer.sv}
+	\caption{Описание мультиплексора на языке \eng{SystemVerilog}}
+	%\label{lab2:code1}
+\end{listing}
 
 \par{Что можно сказать об этом описании? Выходной вектор $y$ — это результат работы трёх ФАЛ, каждая из которых является функцией 6 переменных. Так, $y_0 = f(a_0, b_0, c_0, d_0, s_1, s_0)$.}
 
@@ -327,7 +481,7 @@
 \end{figure}
 
 
-\par{Описать на языке Verilog цифровое устройство, функционирующее согласно следующим принципам:}
+\par{Описать на языке SystemVerilog цифровое устройство, функционирующее согласно следующим принципам:}
 \begin{enumerate}
   \item Ввод информации происходит с переключателей SW[9:0];
   \item SW[3:0] должны обрабатываться дешифратором «DC1», согласно индивидуальному заданию;
@@ -346,11 +500,11 @@
           \label{fig:decoder}
         \end{figure}
 
-        \noindent
-        \begin{minipage}{\linewidth}
-          \lstinputlisting[caption={Пример описания дешифратора для семисегментного индикатора.}]{./code_examples/lab_1/dc_hex.sv}
-        \end{minipage}
-
+        \begin{listing}[H]
+          \inputminted{SystemVerilog}{code_examples/lab_1/dc_hex.sv}
+          \caption{Пример описания дешифратора для семисегментного индикатора}
+          %\label{lab2:code1}
+        \end{listing}
 
 
     \end{itemize}
@@ -365,7 +519,7 @@
 
 
 
-\par{Выполнив описание модуля на языке Verilog необходимо построить временные диаграммы его работы с помощью САПР Altera Quartus.}
+\par{Выполнив описание модуля на языке SystemVerilog необходимо построить временные диаграммы его работы с помощью САПР Altera Quartus.}
 \par{Привязать входы модуля к переключателям SW отладочной платы, а выход к шине HEX0[6:0], получить прошивку для ПЛИС и продемонстрировать её работу.}
 
 
