--- a/preamble.tex
+++ b/preamble.tex
@@ -46,7 +46,7 @@
 \setminted{breaklines=true, 
            frame=lines, 
            framesep=2mm,
-           linenos=true
+           %linenos=true
            }
 
 
@@ -77,7 +77,7 @@
 
 \newcommand{\doctitle}{Проектирование цифровых устройств в SystemVerilog}
 \newcommand{\docsubtitle}{Лабораторный практикум}
-\newcommand{\docauthors}{Ливенцев Е. \\ Примаков Е. \\ Рыжкова Д.}
+\newcommand{\docauthors}{Евгений Ливенцев \\ Евгений Примаков \\ Дарья Рыжкова}
 
 
 % Колонтитулы
