--- a/lab1.tex
+++ b/lab1.tex
@@ -15,7 +15,7 @@
 
 \section{Базовые понятия языка SystemVerilog}
 Перед тем, как непосредственно приступить к разработке цифровых схем, необходимо изучить базовые понятия и конструкции языка SystemVerilog.
-SystemVerilog - сложный и объёмный язык с большим количеством возможностей. Весь функционал языка разделяется на два множества: \emph{синтезируемое множество БОЛД} и \emph{несинтезируемое множество БОЛД}.
+SystemVerilog - сложный и объёмный язык с большим количеством возможностей. Весь функционал языка разделяется на два множества: \emph{синтезируемое множество} и \emph{несинтезируемое множество}.
 
 Под синтезируемым множеством понимается совокупность конструкций языка, которые могут быть воплощены в реальные аппаратные структуры (вентили, триггеры, защелки и так далее). 
 
@@ -25,7 +25,7 @@ SystemVerilog - сложный и объёмный язык с большим к
 \subsection{Модули}
 
 Первым и главным понятием языка SystemVerilog является модуль. Модуль - выполняющий определенную функцию цифровой блок, \quotes{ящик}, который может иметь набор входных и выходных сигналов.
-Модуль всегда начинается с ключевого слова БОЛД module. Далее следует название модуля, в данном случае для наглядности модуль назван \quotes{my\_module\_name}. Заканчивается описание модуля ключевым словом \quotes{endmodule}.
+Модуль всегда начинается с ключевого слова \quotes{module}. Далее следует название модуля, в данном случае для наглядности модуль назван \quotes{my\_module\_name}. Заканчивается описание модуля ключевым словом \quotes{endmodule}.
 
 \begin{listing}[H]
 	\inputminted{SystemVerilog}{code_examples/lab_1/module_example_1.sv}
@@ -468,6 +468,21 @@ SystemVerilog - сложный и объёмный язык с большим к
   $f(1011\bm{1}1) = 1$ & 
   $f(11111\bm{1}) = 1$ \\ 
 \end{longtable}
+
+% \section{Основы работы с Quartus}
+% В данном разделе пошагово описан процесс создания проекта и прошивки отладочной платы в САПР Quartus.
+% В курсе используется Quartus версии 13.0sp1. Дистрибутив САПР вы можете попросить у преподавателя.
+
+% \subsection{Создание проекта}
+
+
+% \begin{figure}[H]
+%   \centering
+%   \includegraphics [width=1\textwidth] {images/lab_1/quartus/1.png}
+%   %\caption{Общая структурная схема проекта выполненной лабораторной работы.}
+%   %\label{lab1:pic1}
+% \end{figure}
+
 
 \section{Задание лабораторной работы}
 
