--- a/preamble.tex
+++ b/preamble.tex
@@ -101,3 +101,11 @@
 \usepackage{listings}
 \usepackage{svg}
 \usepackage{bm}
+
+
+\usepackage{tikz-timing}
+%\usetikztiminglibrary[rising arrows]{clockarrows}
+\tikzset{timing/z/.style={black}}
+\tikzset{timing/Z/.style={black}}
+\usetikztiminglibrary[arrow tip=latex, rising arrows]{clockarrows}
+\usetikztiminglibrary{nicetabs}
