--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
     \tableofcontents
 
     \input{lab1.tex}
-    %\input{lab2.tex}
+    \input{lab2.tex}
     %\input{lab3.tex}
     %\input{lab4.tex}
     %\input{lab5.tex}
