--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
     \input{lab1.tex}
     \input{lab2.tex}
     \input{lab3.tex}
-    %\input{lab4.tex}
+    \input{lab4.tex}
     %\input{lab5.tex}
     %\input{lab6.tex}
     %\input{lab7.tex}
