Правка заголовка ЛР4

--- a/lab4.tex
+++ b/lab4.tex
@@ -1,4 +1,4 @@
-\chapter{Лабораторная работа №4\\Конечные автоматы} 
+\chapter{Конечные автоматы} 
 
 \par{Когда мы проектировали секундомер, у нас возникла необходимость выделить признак того, что в данный момент секундомер работает. Для этого мы создали специальный регистр для хранения этого признака и описали схему управления этим регистром. В других блоках секундомера мы могли проверить признак работы (содержание регистра) и, в зависимости от него, разрешить, запретить или изменить работу.}
 
