Мелкие правки ЛР1 и ЛР4

--- a/lab1.tex
+++ b/lab1.tex
@@ -512,7 +512,7 @@ SystemVerilog - сложный и объёмный язык с большим к
           \centering
           \def\svgwidth{3cm}
           \includesvg{images/lab_1/7seg}
-          \label{fig:decoder}
+          %\label{fig:decoder}
         \end{figure}
 
         \begin{listing}[H]
