--- a/lab4.tex
+++ b/lab4.tex
@@ -96,7 +96,7 @@
 
 %\lstinputlisting[caption={Конечный автомат, реализующий работу светофора}, ]{./code_examples/lab_4/lights.v}
 
-\begin{longlisting}[H]
+\begin{longlisting}
 	\inputminted{SystemVerilog}{code_examples/lab_4/lights.sv}
 	\caption{Конечный автомат, реализующий работу светофора}
 	%\label{lab2:code1}
