--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
     \input{lab2.tex}
     \input{lab3.tex}
     \input{lab4.tex}
-    %\input{lab5.tex}
+    \input{lab5.tex}
     %\input{lab6.tex}
     %\input{lab7.tex}
     %\input{lab8.tex}
