--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
     \input{lab3.tex}
     \input{lab4.tex}
     \input{lab5.tex}
-    %\input{lab6.tex}
+    \input{lab6.tex}
     %\input{lab7.tex}
     %\input{lab8.tex}
     %\input{lab9.tex}
