--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
     \input{lab4.tex}
     \input{lab5.tex}
     \input{lab6.tex}
-    %\input{lab7.tex}
+    \input{lab7.tex}
     %\input{lab8.tex}
     %\input{lab9.tex}
 
